remaining single click disable all buttons an final score

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="main">
         <div class="center">
-            <div class="score-board">Your Score is 0</div>
+            <div class="score-board"></div>
             <div class="question">This your question?</div>
             <div class="ans-btn">
                 <button class="btn">Answer 1</button>
